[package]
name = "prosilient-sync"
version = "0.1.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = {version = "0.6.1", features = ["ws", "macros"]}
futures = "0.3.19"
tokio = { version = "1.16.1", features = ["full"] }
prosilient-geri-protobuf = {path = "./prosilient-geri-protobuf"}
tower-http = { version = "0.3.5", features = ["add-extension", "trace"] }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
tracing = "0.1.37"
prost = {version = "0.11.0"}
sodiumoxide = "0.2.7"
serde_json = "1.0.78"
serde = { version = "1.0.127", features = ["derive"] }
tokio-postgres = "0.7.7"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls" , "postgres", "time", "chrono" , "uuid"] }
anyhow = "1.0"
chrono = "0.4.23"